# libbtc

./: .travis.yml  CMakeLists.txt  Makefile.am  README.md  configure.ac  update_subtrees.sh
include/btc/: hmac.h  script.h  segwit_addr.h  sha2.h  tool.h
src/: base58.c  bip32.c  commontools.c  ecc_key.c  net.c  netspv.c  random.c  ripemd160.c
src/logdb/: logdb_core.c
src/tools/: bitcoin-spv.c  bitcointool.c
test/: net_tests.c  netspv_tests.c  sha2_tests.c  tx_tests.c  unittester.c
